--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -1,59 +1,161 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".HelpActivity">
-
-    <ImageView
+    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/gradientgreen">
+        tools:context=".HelpActivity">
 
-    </ImageView>
+        <ImageView
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintLeft_toLeftOf="parent"
+            android:background="@drawable/logo"
+            tools:ignore="MissingConstraints">
 
-    <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@drawable/opb_logo_basic_1"
+        </ImageView>
+
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fillViewport="true"
+        android:scrollbars="vertical"
         tools:ignore="MissingConstraints">
 
-    </ImageView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:gravity="center">
-
-        <android.support.v7.widget.CardView
-            android:layout_width="300dp"
-            android:layout_height="300dp"
-            app:cardCornerRadius="40dp">
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="100dp"
+            android:orientation="vertical">
 
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:text="  jika ada pertanyaan bisa hubungi nomor ini"
+                android:layout_height="wrap_content"
+                android:text="Help Centre"
                 android:textSize="30dp"
-                android:background="@android:color/darker_gray"
-                android:textColor="#fff">
+                android:fontFamily="@font/big_noodle_titling"
+                android:gravity="center"
+                android:textColor="#000"/>
 
-            </TextView>
             <TextView
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_marginTop="150dp"
-                android:text="021 2 789 97 03"
-                android:background="@android:color/darker_gray"
-                android:textColor="#fff"
-                android:textSize="30dp">
+                android:layout_height="wrap_content"
+                android:text="Pertanyaan yang sering diajukan"
+                android:textColor="#000"
+                android:layout_marginLeft="20dp"
+                android:textSize="20dp"
+                android:layout_marginTop="30dp"/>
 
-            </TextView>
+            <android.support.v7.widget.CardView
+                android:layout_width="300dp"
+                android:layout_marginLeft="20dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="10dp">
 
-        </android.support.v7.widget.CardView>
-    </LinearLayout>
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Tidak bisa login"
+                    android:textSize="20dp"
+                    android:textColor="#268fff">
 
-</android.support.constraint.ConstraintLayout>
+                </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:textColor="#828282"
+                    android:text="Kenapa sangat susah saat login pada aplikasi?"/>
+
+
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="300dp"
+                android:layout_marginLeft="20dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Tidak bisa login"
+                    android:textSize="20dp"
+                    android:textColor="#268fff">
+
+                </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:textColor="#828282"
+                    android:text="Kenapa sangat susah saat login pada aplikasi?"/>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="300dp"
+                android:layout_marginLeft="20dp"
+                android:layout_height="100dp"
+                android:layout_marginTop="20dp"
+                app:cardCornerRadius="10dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:text="Tidak bisa login"
+                    android:textSize="20dp"
+                    android:textColor="#268fff">
+
+                </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="50dp"
+                    android:textColor="#828282"
+                    android:text="Kenapa sangat susah saat login pada aplikasi?"/>
+
+            </android.support.v7.widget.CardView>
+
+            <android.support.v7.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_marginTop="50dp"
+                android:layout_marginRight="50dp"
+                app:cardCornerRadius="10dp"
+                android:layout_marginLeft="50dp"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_gravity="right"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:src="@drawable/call_center"/>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textSize="18dp"
+                    android:layout_marginLeft="10dp"
+                    android:textColor="#268fff"
+                    android:text="Masih butuh bantuan?"/>
+
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="40dp"
+                    android:layout_marginLeft="30dp"
+                    android:text="Nomor CS : 4710466 "/>
+
+            </android.support.v7.widget.CardView>
+        </LinearLayout>
+    </ScrollView>
+
+    </android.support.constraint.ConstraintLayout>
