--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -9,16 +9,16 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/gradientgreen">
+        android:background="@drawable/gradientblue">
 
     </ImageView>
 
     <ImageView
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="200dp"
+        android:layout_height="200dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:background="@drawable/opb_logo_basic_1"
+        android:background="@drawable/logo"
         tools:ignore="MissingConstraints">
 
     </ImageView>
@@ -37,12 +37,17 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:text="aplikasi ini adalah aplikasi tentang bank sampah, yang dimana aplikasi ini dibuat untuk masyarakat agar selalu menjaga kebersihan lingkungan dan sampah yang telah dikumpulkan dapat dijadikan uang "
+                android:text="aplikasi ini adalah aplikasi tentang informasi acara / event di bali yang telah di input oleh user "
                 android:gravity="center"
                 android:textColor="#ffff"
                 android:textSize="24dp">
 
             </TextView>
+
+            <View
+                android:id="@+id/view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
 
         </android.support.v7.widget.CardView>
 
