--- a/app/src/main/res/layout/activity_januari.xml
+++ b/app/src/main/res/layout/activity_januari.xml
@@ -7,29 +7,36 @@
     android:orientation="vertical"
     tools:context="com.example.msi.latihan1.JanuariActivity">
 
-    <TextView
-        android:id="@+id/textacara"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="nama acara">
-
-    </TextView>
-
-    <TextView
-        android:layout_marginTop="50dp"
-        android:id="@+id/texttanggal"
-        android:text="tanggal acara"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
-
-    </TextView>
-
-    <ImageView
-        android:id="@+id/imagefoto"
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycleviewjanuari"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:scrollbars="vertical"
+        android:background="@android:color/darker_gray"/>
 
-    </ImageView>
+<!--    <TextView-->
+<!--        android:id="@+id/textacara"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="nama acara">-->
+
+<!--    </TextView>-->
+
+<!--    <TextView-->
+<!--        android:layout_marginTop="50dp"-->
+<!--        android:id="@+id/texttanggal"-->
+<!--        android:text="tanggal acara"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content">-->
+
+<!--    </TextView>-->
+
+<!--    <ImageView-->
+<!--        android:id="@+id/imagefoto"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="wrap_content">-->
+
+<!--    </ImageView>-->
     <ImageButton
         android:layout_width="97dp"
         android:layout_height="97dp"
