--- a/app/src/main/res/layout/fragment_help.xml
+++ b/app/src/main/res/layout/fragment_help.xml
@@ -1,71 +1,189 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
+    tools:context=".HelpActivity">
 
-    <TextView
-        android:id="@+id/text_slideshow"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradientgreen">
-
-        </ImageView>
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@drawable/opb_logo_basic_1"
-            tools:ignore="MissingConstraints">
-
-        </ImageView>
+        android:fillViewport="true"
+        android:scrollbars="vertical"
+        tools:ignore="MissingConstraints">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:orientation="vertical">
 
-            <android.support.v7.widget.CardView
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                app:cardCornerRadius="40dp">
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
-                <TextView
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:text="  jika ada pertanyaan bisa hubungi nomor ini"
-                    android:textSize="30dp"
-                    android:background="@android:color/darker_gray"
-                    android:textColor="#fff">
+                    android:layout_height="100dp"
+                    android:background="@drawable/bwave">
 
-                </TextView>
-                <TextView
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="150dp"
-                    android:text="021 2 789 97 03"
-                    android:background="@android:color/darker_gray"
-                    android:textColor="#fff"
-                    android:textSize="30dp">
+                </ImageView>
 
-                </TextView>
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/logo"
+                    tools:ignore="MissingConstraints">
 
-            </android.support.v7.widget.CardView>
-        </LinearLayout>
+                 </ImageView>
 
+            </FrameLayout>
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Help Centre"
+            android:textSize="30dp"
+            android:fontFamily="@font/montserrat_semibold"
+            android:gravity="center"
+            android:textColor="#000"/>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Pertanyaan yang sering diajukan"
+            android:textColor="#000"
+            android:layout_marginLeft="20dp"
+            android:textSize="20dp"
+            android:layout_marginTop="30dp"/>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="300dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Tidak bisa login"
+                android:textSize="20dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:textColor="#268fff">
+
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:textColor="#828282"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:text="Kenapa sangat susah saat login pada aplikasi?"/>
+
+
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="300dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Batas input event"
+                android:textSize="20dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:textColor="#268fff">
+
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:textColor="#828282"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:text="Berapa banyak jumlah data event yang dapat di input dalam sehari?"/>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v7.widget.CardView
+            android:layout_width="300dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="20dp"
+            app:cardCornerRadius="10dp">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:text="Operating System yang dapat menjalankan aplikasi"
+                android:textSize="20dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:textColor="#268fff">
+
+            </TextView>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="50dp"
+                android:textColor="#828282"
+                android:paddingTop="20dp"
+                android:paddingLeft="10dp"
+                android:text="Apakah aplikasi bisa dijalankan pada IOS?"/>
+
+        </android.support.v7.widget.CardView>
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="300dp">
+
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_marginTop="50dp"
+            android:layout_marginRight="50dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginLeft="20dp"
+            android:layout_height="100dp">
+
+            <ImageView
+                android:layout_gravity="right"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/call_center"/>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="18dp"
+                android:paddingTop="10dp"
+                android:paddingLeft="10dp"
+                android:layout_marginLeft="10dp"
+                android:textColor="#268fff"
+                android:text="Masih butuh bantuan?"/>
+
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="40dp"
+                android:layout_marginLeft="30dp"
+                android:text="Nomor CS : 4710466 "/>
+
+        </android.support.v7.widget.CardView>
+        </RelativeLayout>
+    </LinearLayout>
+    </ScrollView>
 </android.support.constraint.ConstraintLayout>
