--- a/app/src/main/res/layout/fragment_info.xml
+++ b/app/src/main/res/layout/fragment_info.xml
@@ -1,63 +1,77 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:tools="http://schemas.android.com/tools">
-
-    <TextView
-        android:id="@+id/text_gallery"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@drawable/gradientgreen">
-
-        </ImageView>
-
-        <ImageView
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            app:layout_constraintRight_toRightOf="parent"
-            app:layout_constraintLeft_toLeftOf="parent"
-            android:background="@drawable/opb_logo_basic_1"
-            tools:ignore="MissingConstraints">
-
-        </ImageView>
+    tools:context=".HelpActivity">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center">
+            android:orientation="vertical">
+
+            <FrameLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <ImageView
+                    android:layout_width="match_parent"
+                    android:layout_height="100dp"
+                    android:background="@drawable/gwave">
+
+                </ImageView>
+
+                <ImageView
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:layout_gravity="center_horizontal"
+                    android:background="@drawable/logo"
+                    tools:ignore="MissingConstraints">
+
+            </ImageView>
+
+            </FrameLayout>
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Informasi aplikasi"
+                android:textSize="30dp"
+                android:fontFamily="@font/montserrat_semibold"
+                android:gravity="center"
+                android:textColor="#000"/>
 
             <android.support.v7.widget.CardView
-                android:layout_width="300dp"
-                android:layout_height="300dp"
-                app:cardCornerRadius="40dp"
-                app:cardBackgroundColor="@android:color/darker_gray">
+                android:layout_width="350dp"
+                android:layout_gravity="center"
+                android:layout_height="100dp"
+                android:layout_marginTop="40dp"
+                app:cardCornerRadius="10dp">
 
                 <TextView
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:text="aplikasi ini adalah aplikasi tentang bank sampah, yang dimana aplikasi ini dibuat untuk masyarakat agar selalu menjaga kebersihan lingkungan dan sampah yang telah dikumpulkan dapat dijadikan uang "
-                    android:gravity="center"
-                    android:textColor="#ffff"
-                    android:textSize="24dp">
+                    android:paddingTop="10dp"
+                    android:paddingLeft="20dp"
+                    android:text="Aplikasi Segudang Event"
+                    android:textSize="20dp"
+                    android:textColor="#22e022">
 
                 </TextView>
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingLeft="20dp"
+                    android:paddingRight="20dp"
+                    android:layout_marginTop="50dp"
+                    android:textColor="#828282"
+                    android:text="aplikasi ini adalah aplikasi tentang informasi acara / event di bali yang telah di input oleh user"/>
+
+
 
             </android.support.v7.widget.CardView>
 
         </LinearLayout>
-
 </android.support.constraint.ConstraintLayout>
