--- a/app/src/main/res/layout/fragment_logout.xml
+++ b/app/src/main/res/layout/fragment_logout.xml
@@ -1,19 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/text_tools"
+        android:text="Terima kasih sudah menggunakan aplikasi segudang event:)"
         android:layout_width="match_parent"
+        android:textColor="#000"
         android:layout_height="wrap_content"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="80dp"
         android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-</android.support.constraint.ConstraintLayout>
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/logout"
+        android:layout_width="150dp"
+        android:gravity="center"
+        android:layout_marginTop="180dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center"
+        android:textColor="#fff"
+        android:background="#cf0808"
+        android:text="Logout">
+
+    </Button>
+</LinearLayout>
