--- a/app/src/main/res/layout/layout_dialog.xml
+++ b/app/src/main/res/layout/layout_dialog.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical">
     
+
     <EditText
         android:id="@+id/nama_acara"
         android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:background="@drawable/round_border"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="nama acara">
@@ -13,30 +19,65 @@
     </EditText>
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_marginTop="20dp"
+            android:padding="10dp"
+            android:background="@drawable/round_border"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="20dp"
+            android:layout_marginRight="20dp">
+
+            <ImageView
+                android:id="@+id/tanggal_acara"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:background="@drawable/calendar"
+                android:layout_marginLeft="10dp">
+
+            </ImageView>
 
                 <TextView
                     android:id="@+id/textview_tanggal"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:layout_marginLeft="60dp"
+                    android:textSize="18dp"
                     android:text="Tanggal acara">
 
                 </TextView>
 
-                <ImageView
-                    android:id="@+id/tanggal_acara"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="@drawable/calendar"
-                    android:layout_centerInParent="true">
-
-                </ImageView>
-
         </RelativeLayout>
 
+    <EditText
+        android:id="@+id/number_acara"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_height="wrap_content"
+        android:hint="Nomor Telepon"
+        android:inputType="number"
+        android:maxLength="12"
+        android:digits="0123456789+"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:background="@drawable/round_border">
+
+    </EditText>
+
+    <EditText
+        android:id="@+id/deskripsi_acara"
+        android:hint="Deskripsi acara"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:padding="10dp"
+        android:background="@drawable/round_border">
+
+    </EditText>
     <ImageView
         android:id="@+id/photo"
-        android:layout_marginTop="70dp"
+        android:layout_marginTop="20dp"
         android:layout_width="188dp"
         android:layout_height="188dp"
         android:layout_gravity="center"
@@ -47,8 +88,24 @@
     <Button
         android:id="@+id/btnphoto"
         android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:backgroundTint="#00a62f"
+        android:textColor="#000"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:text="Ambil dari gallery">
+
+    </Button>
+    <Button
+        android:id="@+id/btnconfirm"
+        android:layout_width="match_parent"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="10dp"
+        android:textColor="#ffff"
+        android:backgroundTint="#268fff"
+        android:layout_height="wrap_content"
+        android:text="confirm">
 
     </Button>
 </LinearLayout>
